--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     </a>
 
-    <a href="main_menu.html#pagefoue" target="_self">
+    <a href="main_menu.html#pagefour" target="_self">
     <div class="content_west" id="font">
         <h2>양 식</h2>
     </div>
