--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     </a>
     
-    <a href="main_menu.html#pagefthree" target="_self">
+    <a href="main_menu.html#pagethree" target="_self">
     <div class="content_jepan" id="font">
         <h2>일 식</h2>
     </div>
