--- a/detail_menu-j.html
+++ b/detail_menu-j.html
@@ -251,12 +251,12 @@
     <br><br><br>
   
     <div class="foot">
-       <a href="#" style="color: black;" target="_self">
+       <a href="index.html" style="color: black;" target="_self">
       <i class="fas fa-house-user"></i>
       <p style="text-align: center;">홈</p>
        </a>
   
-       <a href="index.html" style="padding-right: 30px; color: black;">
+       <a href="#" style="padding-right: 30px; color: black;">
         <i class="fas fa-search"></i>
         <p>검색</p>
        </a>
