--- a/detail_menu.html
+++ b/detail_menu.html
@@ -259,12 +259,12 @@
     <br><br><br>
   
     <div class="foot">
-       <a href="#" style="color: black;" target="_self">
+       <a href="index.html" style="color: black;" target="_self">
       <i class="fas fa-house-user"></i>
       <p style="text-align: center;">홈</p>
        </a>
   
-       <a href="index.html" style="padding-right: 30px; color: black;">
+       <a href="#" style="padding-right: 30px; color: black;">
         <i class="fas fa-search"></i>
         <p>검색</p>
        </a>
@@ -285,7 +285,7 @@
 
   $(document).ready(function(){
   
-      $("#pop").load("https://www.google.co.kr/maps/place/%ED%98%84%ED%92%8D%EB%8B%AD%EC%B9%BC%EA%B5%AD%EC%88%98%EA%B2%BD%EC%82%B0%ED%95%98%EC%96%91%EC%A0%90/@35.9140013,128.816974,17z/data=!3m1!4b1!4m5!3m4!1s0x35667278f2bd88c1:0x10ed37b0fcf69516!8m2!3d35.913997!4d128.8191573");
+      $("#pop").load("https://www.google.co.kr/maps/);
   
   });
   
