--- a/detail_menu.html
+++ b/detail_menu.html
@@ -139,6 +139,9 @@
 
   <div data-role="popup" id="pop">
     <h1 style="text-align: center;">맛 집 탐 방</h1>
+    <div class="poptoo" style="width:300px height:300px">
+    <p>지도</p>
+    </div>
 
   </div>
 
@@ -285,7 +288,7 @@
 
   $(document).ready(function(){
   
-      $("#pop").load("https://www.google.co.kr/maps/);
+      $("#poptoo").load("https://www.google.co.kr/maps/);
   
   });
   
