--- a/detail_menu.html
+++ b/detail_menu.html
@@ -288,7 +288,7 @@
 
   $(document).ready(function(){
   
-      $("#poptoo").load("https://www.google.co.kr/maps/);
+      $("#poptoo").load("https://www.google.co.kr/maps/");
   
   });
   
