--- a/detail_menu.html
+++ b/detail_menu.html
@@ -139,7 +139,7 @@
 
   <div data-role="popup" id="pop">
     <h1 style="text-align: center;">맛 집 탐 방</h1>
-    <div class="poptoo" style="width:300px height:300px">
+    <div id="poptoo" style="width:300px height:300px">
     <p>지도</p>
     </div>
 
